<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Medical Record</string>
    <string name="action_settings">Опции</string>
    <string-array name="views_array">
        <item>Мед. книжка</item>
        <item>Лекарства</item>
        <item>Отчеты</item>
        <item>Заметки</item>
        <item>Настройки</item>
    </string-array>
    <string name="menu">Меню</string>
    <string name="first_screen">Медицинская книжка</string>
    <string name="second_screen">Лекарства</string>
    <string name="third_screen">Отчеты</string>
    <string name="four_screen">Заметки</string>
    <string name="five_screen">Настройки</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="cancle">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
    <string name="no_data">Нет данных</string>
    <string name="night">Ночь</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evning">Вечер</string>
    <string name="pillNameHint">Название препарата</string>
    <string name="diseaseNameHint">Название заболевания</string>
    <string name="diseaseAnnotationHint">Аннотация</string>
    <string name="diseaseDateHint">Дата начала</string>
</resources>
